fixed some alignment with my historical places

--- a/CSS-Only/static/css/styles.css
+++ b/CSS-Only/static/css/styles.css
@@ -142,13 +142,16 @@ h1, h2, h3, h4, h5, h6 {
         flex-direction: column;
     }
     .historical-places {
+        display: block;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: -webkit-center;
+        width: 80%;
+        margin: 0 auto;
     }
     .his-info img {
         float: left;
+    }
+    .his-info p {
+        text-align: justify;
     }
     .his-info {
         width: 80%;
